Début d'analyse de données et tests additionels

--- a/Test_Mathis.ipynb
+++ b/Test_Mathis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,15 +22,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EmmanuelMacron\n",
+      "6400646\n"
+     ]
+    }
+   ],
    "source": [
     "user = api.get_user('EmmanuelMacron')\n",
     "print(user.screen_name)\n",
     "print(user.followers_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "725\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(user.friends_count)"
    ]
   },
   {
