Essais gephy avec moins de points

--- a/Generation_CSV_Gephy.ipynb
+++ b/Generation_CSV_Gephy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,8 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -112,7 +114,7 @@
        "5   Puyguillaume            42"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,9 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -205,7 +207,7 @@
        "4   Puyguillaume            42.0             NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +293,7 @@
        "4  LaguerieSarah             0.0             NaN"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +392,7 @@
        "5  LaguerieSarah             0.0             NaN"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +403,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Username</th>\n",
+       "      <th>Nb_Followers_x</th>\n",
+       "      <th>Nb_Followers_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>libe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Le_Figaro</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TDrevet</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OYacine1983</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LaguerieSarah</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Username  Nb_Followers_x  Nb_Followers_y\n",
+       "1           libe             NaN             NaN\n",
+       "2      Le_Figaro             NaN             NaN\n",
+       "3        TDrevet            14.0             NaN\n",
+       "4    OYacine1983             0.0             NaN\n",
+       "5  LaguerieSarah             0.0             NaN"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes = nodes.iloc[0:10000]\n",
+    "print(nodes.shape)\n",
+    "nodes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +569,7 @@
        "5  LaguerieSarah             0.0             NaN"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +595,7 @@
        "Name: Username, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,16 +607,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes.to_csv('nodes.csv', index_label=['Id'] ,header=['Label'])"
+    "nodes.to_csv('nodes_10000.csv', index_label=['Id'] ,header=['Label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -591,43 +686,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>471057</th>\n",
-       "      <td>Daoudadiamout11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>9996</th>\n",
+       "      <td>LotfanK</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>471058</th>\n",
-       "      <td>Tristandlc92</td>\n",
+       "      <th>9997</th>\n",
+       "      <td>kxnpan</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>471059</th>\n",
-       "      <td>SiakaSa52669769</td>\n",
+       "      <th>9998</th>\n",
+       "      <td>fatima42482105</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>39.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>471060</th>\n",
-       "      <td>DayoSze</td>\n",
+       "      <th>9999</th>\n",
+       "      <td>DoviPablo</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>52.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>471061</th>\n",
-       "      <td>saadiidriss1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>10000</th>\n",
+       "      <td>Ximena87156585</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -635,22 +730,15 @@
        "</div>"
       ],
       "text/plain": [
-       "               Username  Nb_Followers_x  Nb_Followers_y  Lien_Figaro  \\\n",
-       "471057  Daoudadiamout11             NaN            24.0          NaN   \n",
-       "471058     Tristandlc92             NaN            23.0          NaN   \n",
-       "471059  SiakaSa52669769             NaN            39.0          NaN   \n",
-       "471060          DayoSze             NaN            52.0          NaN   \n",
-       "471061     saadiidriss1             NaN             1.0          NaN   \n",
-       "\n",
-       "        Lien_Libe  \n",
-       "471057        1.0  \n",
-       "471058        1.0  \n",
-       "471059        1.0  \n",
-       "471060        1.0  \n",
-       "471061        1.0  "
+       "             Username  Nb_Followers_x  Nb_Followers_y  Lien_Figaro  Lien_Libe\n",
+       "9996          LotfanK            41.0            41.0          2.0        1.0\n",
+       "9997           kxnpan            12.0             NaN          2.0        NaN\n",
+       "9998   fatima42482105             0.0             NaN          2.0        NaN\n",
+       "9999        DoviPablo             0.0             NaN          2.0        NaN\n",
+       "10000  Ximena87156585             4.0             4.0          2.0        1.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +810,7 @@
        "5          2.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +889,7 @@
        "4      5          2.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +962,7 @@
        "5        NaN"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +1041,7 @@
        "4      5        NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1150,7 @@
        "28     29        1.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1259,7 @@
        "11     12          2.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1338,7 @@
        "6       7     2.0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1417,7 @@
        "18      19     1.0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1526,7 @@
        "9      12     2.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1573,7 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>299974</th>\n",
+       "      <th>9998</th>\n",
        "      <td>8</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
@@ -1494,12 +1582,12 @@
        "</div>"
       ],
       "text/plain": [
-       "        Source  Target\n",
-       "5            8     2.0\n",
-       "299974       8     1.0"
+       "      Source  Target\n",
+       "5          8     2.0\n",
+       "9998       8     1.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,16 +1598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(599945, 2)"
+       "(14004, 2)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1685,7 @@
        "4       7       2"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,11 +1697,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "liens.to_csv('liens.csv',header=['Source','Target'], index=False,index_label=False)"
+    "liens.to_csv('liens_10000.csv',header=['Source','Target'], index=False,index_label=False)"
    ]
   },
   {
